[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/gui/speed_button.svg" type="Texture" id=1]
[ext_resource path="res://src/GUI/UIStatButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/gui/heart_button.svg" type="Texture" id=3]
[ext_resource path="res://src/GUI/UIStatsMenu.gd" type="Script" id=4]

[node name="UIStatsMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 784.0
margin_top = 480.0
margin_right = 1136.0
margin_bottom = 632.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.0
margin_top = -48.0
margin_right = 148.0
margin_bottom = 48.0

[node name="DamageButton" parent="HBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 96.0
margin_bottom = 96.0

[node name="SpeedButton" parent="HBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_top = 0.0
margin_right = 196.0
margin_bottom = 96.0
texture = ExtResource( 1 )

[node name="HealthButton" parent="HBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 200.0
margin_top = 0.0
margin_right = 296.0
margin_bottom = 96.0
texture = ExtResource( 3 )
stat_increment = 1.0
is_increment_relative = false
[connection signal="purchased_stat" from="HBoxContainer/DamageButton" to="." method="_on_DamageButton_purchased_stat"]
[connection signal="purchased_stat" from="HBoxContainer/SpeedButton" to="." method="_on_SpeedButton_purchased_stat"]
[connection signal="purchased_stat" from="HBoxContainer/HealthButton" to="." method="_on_HealthButton_purchased_stat"]
